added aggregatorKeywordKeyEnable configuration.